tests/NormalTests/paczka1/fuzzy1/74792080.err
Error in line 4: S234 S234 87,8
Error in line 3: NfRON A309 66,1
Error in line 7: u9FqrCNmIYC A396 89,8
Error in line 12: NfRON A396 9,0
Error in line 26: YbMxThl A309 12,0
Error in line 24: FKiR S234 25,6
Error in line 34: NfRON S234 51,9
